--- a/project-dating/dating.html
+++ b/project-dating/dating.html
@@ -23,7 +23,7 @@
       — ending in a wedding photo booth you can actually save. Swipe, hold
       hands, kiss at the right moment, then build your own over-the-top wedding
       photo as a souvenir.
-      <a href="README.md" class="tomorrow-bold-italic">README</a>
+      <a href="read.html" class="tomorrow-bold-italic">README</a>
     </header>
 
     <nav class="project-nav">
@@ -98,7 +98,7 @@
     <footer class="footer-nav tomorrow-light">
       <a href="../contact.html">contact</a>
       <a href="../index.html">home</a>
-      <a href="README.md">README</a>
+      <a href="read.html">README</a>
     </footer>
 
     <!-- p5 + addons -->
