--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <a href="project-dating/dating.html" class="project-item p-dating">
                     <div class="box"></div><p>Dating Game<br>我是公主</p>
                 </a>
-                <a href="project-diary.html" class="project-item p-diary">
+                <a href="project-dairy/test.html" class="project-item p-diary">
                     <div class="box"></div><p>Dear Diary<br>我是公主</p>
                 </a>
-                <a href="project-filter.html" class="project-item p-filter">
-                    <div class="box"></div><p>滤镜时间到<br>我是公主</p>
+                <a href="project-filter/facepage.html" class="project-item p-filter">
+                    <div class="box"></div><p>Filter<br>我是公主</p> 
                 </a>
                 <a href="project-hahaha.html" class="project-item p-hahaha">
                     <div class="box"></div><p>Hahaha<br>我是公主</p>
