--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 </header>
 
             <div class="project-grid">
-                <a href="project-thesis.html" class="project-item p-thesis">
-                    <div class="box"></div><p>Thesis<br>我是公主</p>
+                <!-- <a href="project-thesis.html" class="project-item p-thesis">
+                    <div class="box"></div><p>Thesis<br>我是公主</p> -->
                 </a>
                 <a href="project-dating/dating.html" class="project-item p-dating">
                     <div class="box"></div><p>Dating Game<br>我是公主</p>
@@ -52,13 +52,13 @@
                 <a href="project-dairy/test.html" class="project-item p-diary">
                     <div class="box"></div><p>Dear Diary<br>我是公主</p>
                 </a>
-                <a href="project-filter/facepage.html" class="project-item p-filter">
+                <!-- <a href="project-filter/facepage.html" class="project-item p-filter">
                     <div class="box"></div><p>Filter<br>我是公主</p> 
-                </a>
+                </a> -->
                 <a href="project-hahaha/index.html" class="project-item p-hahaha">
                     <div class="box"></div><p>Hahaha<br>我是公主</p>
                 </a>
-                <a href="project-wetalk.html" class="project-item p-wetalk">
+                <!-- <a href="project-wetalk.html" class="project-item p-wetalk">
                     <div class="box"></div><p>Wetalk<br>我是公主</p>
                 </a>
                 <a href="project-tear.html" class="project-item p-tear">
@@ -75,8 +75,8 @@
                 </a>
                 <a href="project-animation.html" class="project-item p-animation">
                     <div class="box"></div><p>Animation<br>我是公主</p>
-                </a>
-                <a href="project-poster.html" class="project-item p-poster">
+                </a> -->
+                <a href="project-tabletalk/index.html" class="project-item p-poster">
                     <div class="box"></div><p>刘雨萱poster<br>我是公主</p>
                 </a>
             </div>
