--- a/project-tabletalk/index.html
+++ b/project-tabletalk/index.html
@@ -94,29 +94,11 @@
           </figure>
 
           <div class="hero-inline">
-            <div class="lead">
-              <p>
-                <span class="en">
-                  Table Talk is an interactive installation about how authority speaks,
-                  and how silence is produced in everyday spaces.
-                </span>
-                <br />
-                <span class="en">It takes place around a kitchen table.</span>
-              </p>
-
-              <p>
-                <span class="en">The system speaks.</span><br />
-                <span class="en">It pauses.</span><br />
-                <span class="en">It resumes.</span>
-              </p>
-
-              <p>
-                <span class="en">
-                  Most of the time, it stands there unnoticed. You don't realize you're part of it—
-                  until you do. By then, leaving is no longer the point.
-                </span>
-              </p>
-            </div>
+            <figure class="text-card">
+              <p>Table Talk is an interactive installation about how authority speaks and how silence is produced in everyday spaces.</p>
+              <p>It takes place in a kitchen stage.<br>The system speaks.<br>It pauses.<br>It resumes.</p>
+              <p>Most of the time, it goes unnoticed.<br>Like the aches and pains of domestic living.<br>Under the thumb of an invisible authority.</p>
+            </figure>
 
             <figure class="media hero-video">
               <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/720x1280/e8e8e8/666?text=Video+Overview">
@@ -134,25 +116,43 @@
           <div class="bilingual single-col">
             <div class="col">
               <h3 class="h3">English</h3>
-              <p>The table is staged like a familiar kitchen scene.</p>
-              <p>A voice keeps speaking.</p>
-              <p>A pan sits on the stove. A basket of ingredients nearby. Printed "recipes" are laid out.</p>
+              <p>The table is set like a familiar kitchen scene.</p>
+              <p>A voice speaks.</p>
+              <p>On the stove, there is a pan.
+A basket of ingredients.
+And several printed recipes for reference.
+</p>
 
-              <p>The recipes give instructions—like everyday cooking guides.</p>
-              <p>Except the ingredients and the way you're asked to handle them aren't quite everyday.</p>
+              <p>The recipes give instructions.</p>
+              <p>They resemble everyday cooking guides,
+but involve components and processes that are less familiar.
+</p>
 
-              <p>When ingredients go into the pan, voices arrive.</p>
+              <p>As ingredients are placed into the pan,
+corresponding voices begin to appear.
+</p>
               <p>Different actions trigger different responses.</p>
 
-              <p>Some voices are directional—only for the person standing right in front of them.</p>
-              <p>Others stay in the room no matter where you stand.</p>
+              <p>Some voices address only the person standing at the table.</p>
+              <p>Others persist, regardless of where you are in the space.</p>
 
-              <p>At certain moments, the recipe tells you to interact back.</p>
-              <p>Raising your voice can interrupt what's happening—briefly.</p>
+              <p>At certain moments, the recipe invites direct interaction with the system.</p>
+              <p>Raising your voice may interrupt the process—
+but only briefly.
+</p>
 
-              <p>It doesn't ask. It doesn't explain. It keeps running.</p>
-              <p>You can follow, hesitate, interrupt, or stop mid-action.</p>
-              <p>None of those choices truly shut the system down.</p>
+              <p>It does not ask questions.
+It does not explain itself.
+It continues.
+</p>
+              <p>Participants may follow the instructions,
+hesitate,
+interrupt,
+or leave actions unfinished.
+</p>
+              <p>But none of these choices
+bring the system to a stop.
+</p>
             </div>
           </div>
 
@@ -175,7 +175,9 @@
             </figure>
             <!-- The 2nd card (ingredients) -->
             <figure class="media">
-              <img src="https://via.placeholder.com/800x600/f5f5f5/999?text=Ingredients" alt="Ingredients placeholder" />
+              <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/800x600/f5f5f5/999?text=Ingredients">
+                <source src="VIDEO/table3-3.mp4" type="video/mp4" />
+              </video>
               <figcaption>Ingredients as triggers (placeholder)</figcaption>
             </figure>
           </div>
@@ -187,59 +189,45 @@
 
           <div class="bilingual">
             <div class="col">
-              <h3 class="h3">中文</h3>
-              <p>《Table Talk》通过一组简单、基于规则的互动机制运作。</p>
-              <p>桌边的物理行为会触发声音与影像的变化。系统会监听、测量，并作出回应。</p>
+              <h3 class="h3">Table Talk operates through a set of simple, rule-based interactions.</h3>
+              <br><br>
+              <p>Physical actions occurring around the table trigger changes in sound and visual elements. The system listens, measures, and responds.</p>
+              <br>
 
-              <p><b>重量触发：</b>重量传感器检测食材是否被放入锅中。不同重量区间对应不同的声音与影像状态。</p>
-              <p>有的评论关于食材是否新鲜、有多"合适"；有的直接指向你作为一个人的行为规范。</p>
-
-              <p><b>音量触发：</b>桌旁有一个立着的"耳朵"，里面放着麦克风监测环境音量。</p>
-              <p>当音量超过阈值，系统会暂停当前内容。但这种暂停是暂时的。</p>
-              <p>短暂间隔后，系统会重新开始——并告诉你"你反应好大"。</p>
-
-              <p><b>身体中断：</b>角落里有一个很大的软雕塑人脸。</p>
-              <p>参与者把手伸进鼻孔，可以拿到两张小脸（小笑脸里嵌入压力传感器）。</p>
-              <p>当它被按下时，所有声音与影像会同时停止。房间进入黑屏/静默。</p>
-
-              <p>但系统并不会关闭。延迟之后，它回到默认状态。</p>
-              <p>当下一个人靠近桌子，声音又开始——甚至会对"上一个人"做评价：你不要像她那样。</p>
-
-              <p>系统不记住人，也不会学习。它只遵循规则，并继续运作。</p>
+              <p><b>Weight trigger:</b> A load cell installed beneath the table detects what ingredients are placed into the pan.</p>
+              <p>Different weight ranges correspond to different audio and visual states.</p>
+              <p>These states activate spoken voices—some comment on whether the ingredient is “appropriate” or “fresh,” while others shift toward evaluating the participant’s behavior.</p>
             </div>
 
             <div class="col">
-              <h3 class="h3">English</h3>
-              <p>Table Talk runs on a simple, rule-based set of interactions.</p>
-              <p>Physical actions at the table trigger changes in sound and image. The system listens, measures, and responds.</p>
+              <h3 class="h3">Sound &amp; interruption</h3>
+              <p><b>Volume trigger:</b> Beside the table stands an upright ear. A microphone is embedded inside it to monitor the ambient sound level.</p>
+              <p>When the volume exceeds a certain threshold, the system pauses. Temporarily.</p>
+              <p>After few seconds, the system resumes—often responding by commenting on the participant’s reaction, suggesting that they were “overreacting.”</p>
 
-              <p><b>Weight trigger:</b> A load cell detects when ingredients are placed into the pan.</p>
-              <p>Different weight ranges map to different voice + video states.</p>
-              <p>Some comments are about the ingredient—freshness, "proper" handling. Others are about you.</p>
-
-              <p><b>Volume trigger:</b> A standing "ear" contains a microphone that monitors ambient loudness.</p>
-              <p>When the volume crosses a threshold, the system pauses the current content—temporarily.</p>
-              <p>After a short delay, it resumes and tells you you "overreacted."</p>
-
-              <p><b>Body interruption:</b> In the corner, there is a large soft face sculpture.</p>
-              <p>When participants reach into its nostrils, they can hold two small faces embedded with pressure sensors.</p>
-              <p>Pressing them stops all sound and image at once. The room drops into blackout / silence.</p>
-
-              <p>But the system doesn't shut down. After a delay, it returns to default.</p>
-              <p>When the next person approaches the table, the voice begins again—sometimes commenting on the person before: don't be like her.</p>
-
-              <p>The system doesn't remember people. It doesn't learn. It follows rules and keeps running.</p>
+              <p><b>Body interruption:</b> The installation includes a soft sculpture in the form of an enlarged human face. When participants place their hands into the nostrils, they can retrieve two smaller faces with embedded pressure sensors. Pressing them interrupts everything: sound and visuals stop at once.</p>
+              <p>This interruption is achieved through bodily action—no speech required. After a delay, the system returns to its default state, sometimes warning the next participant: “Don’t be like her.” It doesn’t remember people; each action is processed in real time as an isolated event.</p>
             </div>
           </div>
 
           <div class="media-grid">
             <figure class="media">
-              <img src="https://via.placeholder.com/800x600/f0f0f0/888?text=System+Diagram" alt="System diagram placeholder" />
-              <figcaption>System diagram / sensor map (placeholder)</figcaption>
+              <img src="good/arra.png" alt="Arrangement sketch" />
+              <figcaption>arrangement</figcaption>
             </figure>
             <figure class="media">
-              <img src="https://via.placeholder.com/800x600/f0f0f0/888?text=Face+Sculpture" alt="Face sculpture placeholder" />
-              <figcaption>Soft face sculpture + pressure sensors (placeholder)</figcaption>
+              <img src="good/ardu.png" alt="Arduino wiring" />
+              <figcaption>arduino</figcaption>
+            </figure>
+            <figure class="media">
+              <img src="good/head.png" alt="Face sculpture placeholder" />
+              <figcaption>Soft face sculpture</figcaption>
+            </figure>
+            <figure class="media process-video-card">
+              <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/720x1280/e8e8e8/666?text=Process+clip">
+                <source src="VIDEO/table4-1.mp4" type="video/mp4" />
+              </video>
+              <figcaption>faces inside of the nasal</figcaption>
             </figure>
           </div>
         </section>
@@ -250,14 +238,29 @@
 
           <div class="story">
             <p>The room is divided into three zones.</p>
-            <p>They are not arranged to guide you gently through the space. They face each other.</p>
+            <p>They are not arranged to guide you gently through the space.
+They face each other.
+</p>
           </div>
 
           <div class="zones">
             <div class="zone">
               <h3 class="h3">Projection Zone</h3>
-              <p>A close-up video of a man's mouth is projected onto the wall. It speaks continuously.</p>
-              <p>Only the person standing directly in front hears the scolding clearly. Others hear a mumble.</p>
+              <p>At one end of the room, a close-up video of a man’s mouth is projected onto the wall.
+It speaks continuously.
+</p>
+              <p>The voice delivers instructions, advice, corrections—
+the kind that sound reasonable, familiar, even caring.
+</p>
+<p>You don’t activate it.
+It’s already there when you arrive.
+</p>
+<p>Only the person standing directly in front of the projection hears the scolding clearly.
+Others hear mumbled speech.
+</p>
+<p>The voice feels directional.
+It knows who it is speaking to.
+</p>
               <p>Technically: MetaHuman (UE5) lip sync + AI voice, with a green-painted face as a symbol of replaceability.</p>
               <div class="zone-media">
                 <img src="https://via.placeholder.com/900x600/ddd/777?text=Projection+Zone" alt="Projection zone placeholder" />
