--- a/project-tabletalk/index.html
+++ b/project-tabletalk/index.html
@@ -94,17 +94,17 @@
           </figure>
 
           <div class="hero-inline">
-            <figure class="text-card">
-              <p>Table Talk is an interactive installation about how authority speaks and how silence is produced in everyday spaces.</p>
-              <p>It takes place in a kitchen stage.<br>The system speaks.<br>It pauses.<br>It resumes.</p>
-              <p>Most of the time, it goes unnoticed.<br>Like the aches and pains of domestic living.<br>Under the thumb of an invisible authority.</p>
-            </figure>
-
             <figure class="media hero-video">
               <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/720x1280/e8e8e8/666?text=Video+Overview">
                 <source src="VIDEO/table2-1.mp4" type="video/mp4" />
               </video>
               <figcaption>Overview video </figcaption>
+            </figure>
+
+            <figure class="text-card">
+              <p>Table Talk is an interactive installation about how authority speaks and how silence is produced in everyday spaces.</p>
+              <p>It takes place in a kitchen stage.<br>The system speaks.<br>It pauses.<br>It resumes.</p>
+              <p>Most of the time, it goes unnoticed.<br>Like the aches and pains of domestic living.<br>Under the thumb of an invisible authority.</p>
             </figure>
           </div>
         </section>
@@ -115,8 +115,8 @@
 
           <div class="bilingual single-col">
             <div class="col">
-              <h3 class="h3">English</h3>
-              <p>The table is set like a familiar kitchen scene.</p>
+              <h3 class="h3">The table is set like a familiar kitchen scene.</h3>
+              <!-- <p>The table is set like a familiar kitchen scene.</p> -->
               <p>A voice speaks.</p>
               <p>On the stove, there is a pan.
 A basket of ingredients.
@@ -171,14 +171,14 @@ bring the system to a stop.
                 <button class="slider-arrow prev" type="button" aria-label="Previous">←</button>
                 <button class="slider-arrow next" type="button" aria-label="Next">→</button>
               </div>
-              <figcaption>Table setup / recipe cards (click to view full size)</figcaption>
+              <figcaption>instruction and recipe (click to view full size)</figcaption>
             </figure>
             <!-- The 2nd card (ingredients) -->
             <figure class="media">
               <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/800x600/f5f5f5/999?text=Ingredients">
                 <source src="VIDEO/table3-3.mp4" type="video/mp4" />
               </video>
-              <figcaption>Ingredients as triggers (placeholder)</figcaption>
+              <figcaption>Ingredients as triggers</figcaption>
             </figure>
           </div>
         </section>
@@ -261,29 +261,95 @@ Others hear mumbled speech.
 <p>The voice feels directional.
 It knows who it is speaking to.
 </p>
+              <div class="zone-media video-horizontal">
+                <video class="zone-video horizontal" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/900x600/ddd/777?text=Projection+video+16x9">
+                  <source src="VIDEO/pifinallll.mp4" type="video/mp4" />
+                </video>
+              </div>
               <p>Technically: MetaHuman (UE5) lip sync + AI voice, with a green-painted face as a symbol of replaceability.</p>
-              <div class="zone-media">
+              <!-- <div class="zone-media">
                 <img src="https://via.placeholder.com/900x600/ddd/777?text=Projection+Zone" alt="Projection zone placeholder" />
+              </div> -->
+              <div class="zone-media video-vertical">
+                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
+                  <source src="VIDEO/table3-4.mp4" type="video/mp4" />
+                </video>
               </div>
             </div>
 
             <div class="zone">
               <h3 class="h3">Cooking Zone</h3>
-              <p>Directly facing the projection is a kitchen table.</p>
-              <p>Ingredients placed into the pan trigger different voices and visuals. A microphone can pause the system—briefly.</p>
-              <p>After the pause, it resumes and comments on your reaction.</p>
+              <p>Directly facing the projection is a kitchen table.
+</p>
+              <p>A pan sits on the stove.
+A basket of ingredients rests nearby.
+Printed recipes are laid out for reference.
+</p>
+              <p>The setup looks familiar.
+</p>
+<p>The recipes give instructions, like everyday cooking guides,
+but involve ingredients and processes that are less familiar.
+</p>
+<p>As ingredients are placed into the pan,
+the system responds.
+</p>
+<p>Different weights trigger different voices and visuals.
+Some comments are about the food—
+whether it’s fresh, appropriate, or prepared correctly.
+</p>
+<p>Others are about you.</p>
+
+<p>after the interaction, the cooking continues.
+So does the voice.
+</p>
               <div class="zone-media">
-                <img src="https://via.placeholder.com/900x600/ddd/777?text=Cooking+Zone" alt="Cooking zone placeholder" />
+                <img src="good/ppl.png" alt="Cooking zone placeholder" />
+              </div>
+               <div class="zone-media video-vertical">
+                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
+                  <source src="VIDEO/table3-2.mp4" type="video/mp4" />
+                </video>
+              </div>
+               <div class="zone-media video-vertical">
+                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
+                  <source src="VIDEO/table1-4.mp4" type="video/mp4" />
+                </video>
+              </div>
+               <div class="zone-media video-vertical">
+                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
+                  <source src="VIDEO/table2-2.mp4" type="video/mp4" />
+                </video>
               </div>
             </div>
 
             <div class="zone">
               <h3 class="h3">Face Interaction Zone</h3>
-              <p>In a corner, slightly away from the main axis, there is a large soft sculpture of a human face.</p>
-              <p>Inside the nostrils are two smaller faces embedded with pressure sensors. Pressing them stops everything at once.</p>
-              <p>After a delay, the system returns. When the next person approaches the table, the voice begins again.</p>
-              <div class="zone-media">
-                <img src="https://via.placeholder.com/900x600/ddd/777?text=Face+Zone" alt="Face interaction zone placeholder" />
+              <p>In a corner of the room, slightly away from the main axis,
+there is a large soft sculpture of a human face.
+</p>
+              <p>Inside the nostrils are two smaller faces.
+They are embedded with pressure sensors.
+</p>
+              <p>When participants reach inside and press them,
+all sounds and images stop at once.
+
+The room goes quiet.
+
+The interruption feels decisive—
+but it is not permanent.
+
+After a delay, the system returns to its default state.
+
+When the next participant approaches the table,
+the voice begins again.
+
+This time, it speaks about the previous person.
+It warns the next one not to behave like her.
+</p>
+               <div class="zone-media video-vertical">
+                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
+                  <source src="VIDEO/Jessie_Animation.mp4" type="video/mp4" />
+                </video>
               </div>
             </div>
           </div>
@@ -294,37 +360,43 @@ It knows who it is speaking to.
           <h2 class="h2">4 — Development & Prototypes</h2>
 
           <p class="mini">
-            这里按 Version 1 → Version 2 → Final 来放图最清楚。每张图都是缩略图，点开看大图/大视频。
+           
           </p>
 
           <!-- ========== VERSION 1 ========== -->
           <div class="version-block">
             <div class="version-head">
               <div class="version-name">Version 1</div>
-              <div class="version-meta">Proof of concept / early test</div>
+              <div class="version-meta">early stage</div>
             </div>
 
             <p class="gallery-note">
-              你可以写 2–3 句：当时你在测试什么、发现了什么问题、下一步怎么改。
+             Table Talk started from my experience of being addressed online by strangers whose words felt moralizing and disciplinary rather than communicative.
+I became interested in how language can exercise power while pretending to be care.
             </p>
 
-            <div class="thumb-grid">
-              <!-- Thumb 1 -->
+            <div class="thumb-grid two-col">
               <a class="thumb" href="#lb-v1-01">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V1+Setup" alt="V1 thumb 01" loading="lazy">
-                <div class="thumb-cap">V1 — table setup test (placeholder)</div>
+                <img class="thumb-media contain" src="good/1.png" alt="V1 thumb 01" loading="lazy">
+                <div class="thumb-cap">my experience</div>
               </a>
 
-              <!-- Thumb 2 -->
               <a class="thumb" href="#lb-v1-02">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V1+Projection" alt="V1 thumb 02" loading="lazy">
-                <div class="thumb-cap">V1 — projection material study (placeholder)</div>
+                <img class="thumb-media contain" src="good/1-2.png" alt="V1 thumb 02" loading="lazy">
+                <div class="thumb-cap">At first, I imagined multiple screens forming a collective of different “father” figures.
+They would respond in real time to the person standing on the treadmill.
+The treadmill represents enforced continuity— as long as the body keeps moving, the voices continue.
+The participant is addressed not by one figure, but by a structure.</div>
               </a>
 
-              <!-- Thumb 3 (video thumb也行，用poster) -->
               <a class="thumb" href="#lb-v1-03">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V1+Video" alt="V1 thumb 03" loading="lazy">
-                <div class="thumb-cap">V1 — short clip (placeholder)</div>
+                <img class="thumb-media contain" src="good/1-3.png" alt="V1 thumb 03" loading="lazy">
+                <div class="thumb-cap">face attempt</div>
+              </a>
+
+              <a class="thumb" href="#lb-v1-04">
+                <img class="thumb-media contain" src="good/1-4.png" alt="V1 thumb 04" loading="lazy">
+                <div class="thumb-cap">testing with materials for projection</div>
               </a>
             </div>
           </div>
@@ -333,28 +405,31 @@ It knows who it is speaking to.
           <div class="version-block">
             <div class="version-head">
               <div class="version-name">Version 2</div>
-              <div class="version-meta">Interaction clearer / system rules forming</div>
+              <div class="version-meta">system rules forming</div>
             </div>
 
             <p class="gallery-note">
-              这里建议放：传感器/触发逻辑、recipe card、声音层级、观众怎么走动/误读/理解。
+              At this stage, I realized that I was trying to include too much, which left participants unsure of how to act.
+The system became dense rather than directional.
             </p>
 
-            <div class="thumb-grid">
+            <div class="thumb-grid one-col">
               <a class="thumb" href="#lb-v2-01">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V2+Sensor" alt="V2 thumb 01" loading="lazy">
-                <div class="thumb-cap">V2 — sensor + pan trigger (placeholder)</div>
+                <img class="thumb-media" src="good/v2.png" alt="V2 thumb 01" loading="lazy">
+                <div class="thumb-cap">character design, layout in 3d and touch designer process</div>
               </a>
 
-              <a class="thumb" href="#lb-v2-02">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V2+Recipe" alt="V2 thumb 02" loading="lazy">
-                <div class="thumb-cap">V2 — recipe cards & instructions (placeholder)</div>
-              </a>
+              <div class="thumb-grid two-col">
+                <a class="thumb square-thumb" href="#lb-v2-02">
+                  <img class="thumb-media" src="good/face.png" alt="V2 thumb 02" loading="lazy">
+                  <div class="thumb-cap">texture map</div>
+                </a>
 
-              <a class="thumb" href="#lb-v2-03">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=V2+Testing" alt="V2 thumb 03" loading="lazy">
-                <div class="thumb-cap">V2 — audience testing moment (placeholder)</div>
-              </a>
+                <a class="thumb" href="#lb-v2-03">
+                  <img class="thumb-media contain" src="good/v2-3.png" alt="V2 thumb 03" loading="lazy">
+                  <div class="thumb-cap">animation and modeling</div>
+                </a>
+              </div>
             </div>
           </div>
 
@@ -366,23 +441,23 @@ It knows who it is speaking to.
             </div>
 
             <p class="gallery-note">
-              Final 建议放：三分区全景、Face corner、Projection mouth、Cooking table对视关系、以及最终展示的"节奏"。
+              
             </p>
 
             <div class="thumb-grid">
               <a class="thumb" href="#lb-final-01">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=Final+Room" alt="Final thumb 01" loading="lazy">
-                <div class="thumb-cap">Final — full room view (placeholder)</div>
+                <img class="thumb-media contain" src="good/plantout.jpg" alt="Final thumb 01" loading="lazy">
+                <div class="thumb-cap">floor plan</div>
               </a>
 
               <a class="thumb" href="#lb-final-02">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=Final+Face" alt="Final thumb 02" loading="lazy">
-                <div class="thumb-cap">Final — face interaction corner (placeholder)</div>
+                <img class="thumb-media" src="good/47.JPG" alt="Final thumb 02" loading="lazy">
+                <div class="thumb-cap">3d print and air dry caly</div>
               </a>
 
               <a class="thumb" href="#lb-final-03">
-                <img class="thumb-media" src="https://via.placeholder.com/800x600/e8e8e8/888?text=Final+Digital" alt="Final thumb 03" loading="lazy">
-                <div class="thumb-cap">Final — digital simulation (placeholder)</div>
+                <img class="thumb-media" src="good/75.JPG" alt="Final thumb 03" loading="lazy">
+                <div class="thumb-cap">websocket and load cell</div>
               </a>
             </div>
           </div>
