--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Working across interactive installations, animation, and physical interfaces
                 <a href="project-tabletalk/index.html" class="project-item p-dating">
                     <div class="box"></div><p>TableTalk<br>2025</p>
                 </a>
-                <a href="project-dairy/test.html" class="project-item p-diary">
-                    <div class="box"></div><p>Dear Diary<br>2023</p>
+                <a href="project-wetalk/index.html" class="project-item p-diary">
+                    <div class="box"></div><p>WeTalk<br>2025</p>
                 </a>
                
                 <a href="project-hahaha/index.html" class="project-item p-hahaha">
