--- a/project-tabletalk/index.html
+++ b/project-tabletalk/index.html
@@ -90,14 +90,12 @@
 
           <figure class="media hero-media">
             <img src="good/table1.jpg" alt="Table Talk hero image placeholder" />
-            <figcaption>stove set up</figcaption>
+            <figcaption>stove setup</figcaption>
           </figure>
 
           <div class="hero-inline">
             <figure class="media hero-video">
-              <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/720x1280/e8e8e8/666?text=Video+Overview">
-                <source src="VIDEO/table2-1.mp4" type="video/mp4" />
-              </video>
+              <iframe class="table-video" src="https://www.youtube.com/embed/WI7-TXXeTqM?autoplay=1&mute=1&loop=1&playlist=WI7-TXXeTqM&playsinline=1" title="Video overview" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               <figcaption>Overview video </figcaption>
             </figure>
 
@@ -175,9 +173,7 @@ bring the system to a stop.
             </figure>
             <!-- The 2nd card (ingredients) -->
             <figure class="media">
-              <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/800x600/f5f5f5/999?text=Ingredients">
-                <source src="VIDEO/table3-3.mp4" type="video/mp4" />
-              </video>
+              <iframe class="table-video" src="https://www.youtube.com/embed/hIYBZ0hQgiY?autoplay=1&mute=1&loop=1&playlist=hIYBZ0hQgiY&playsinline=1" title="Ingredients video" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               <figcaption>Ingredients as triggers</figcaption>
             </figure>
           </div>
@@ -224,10 +220,8 @@ bring the system to a stop.
               <figcaption>Soft face sculpture</figcaption>
             </figure>
             <figure class="media process-video-card">
-              <video class="table-video" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/720x1280/e8e8e8/666?text=Process+clip">
-                <source src="VIDEO/table4-1.mp4" type="video/mp4" />
-              </video>
-              <figcaption>faces inside of the nasal</figcaption>
+              <iframe class="table-video" src="https://www.youtube.com/embed/g65GNcfrvk4?autoplay=1&mute=1&loop=1&playlist=g65GNcfrvk4&playsinline=1" title="Process clip" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <figcaption>faces inside nostrils</figcaption>
             </figure>
           </div>
         </section>
@@ -261,20 +255,27 @@ Others hear mumbled speech.
 <p>The voice feels directional.
 It knows who it is speaking to.
 </p>
-              <div class="zone-media video-horizontal">
-                <video class="zone-video horizontal" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/900x600/ddd/777?text=Projection+video+16x9">
-                  <source src="VIDEO/pifinallll.mp4" type="video/mp4" />
-                </video>
-              </div>
-              <p>Technically: MetaHuman (UE5) lip sync + AI voice, with a green-painted face as a symbol of replaceability.</p>
-              <!-- <div class="zone-media">
-                <img src="https://via.placeholder.com/900x600/ddd/777?text=Projection+Zone" alt="Projection zone placeholder" />
-              </div> -->
-              <div class="zone-media video-vertical">
-                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
-                  <source src="VIDEO/table3-4.mp4" type="video/mp4" />
-                </video>
-              </div>
+              <figure class="zone-media video-horizontal">
+                <iframe
+                  class="zone-video horizontal"
+                  src="https://www.youtube.com/embed/j3Ip5rvkmT8?autoplay=1&mute=1&loop=1&playlist=j3Ip5rvkmT8&controls=0&playsinline=1"
+                  frameborder="0"
+                  allow="autoplay; fullscreen; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <figcaption>Projection mouth — MetaHuman (UE5) lip sync + AI voice, green-painted face as replaceable symbol.</figcaption>
+              </figure>
+
+              <figure class="zone-media video-vertical">
+                <iframe
+                  class="zone-video vertical"
+                  src="https://www.youtube.com/embed/1ZRTtzlzxWI?autoplay=1&mute=1&loop=1&playlist=1ZRTtzlzxWI&controls=0&playsinline=1"
+                  frameborder="0"
+                  allow="autoplay; fullscreen; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <figcaption>Projection close-up (vertical)</figcaption>
+              </figure>
             </div>
 
             <div class="zone">
@@ -306,9 +307,14 @@ So does the voice.
                 <img src="good/ppl.png" alt="Cooking zone placeholder" />
               </div>
                <div class="zone-media video-vertical">
-                <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
-                  <source src="VIDEO/table3-2.mp4" type="video/mp4" />
-                </video>
+             <iframe
+  class="zone-video vertical"
+  src="https://www.youtube.com/embed/XyEVXeynYg8?autoplay=1&mute=1&loop=1&playlist=XyEVXeynYg8&controls=0&playsinline=1"
+  frameborder="0"
+  allow="autoplay; fullscreen; picture-in-picture"
+  allowfullscreen
+></iframe>
+
               </div>
                <div class="zone-media video-vertical">
                 <video class="zone-video vertical" controls playsinline muted autoplay loop preload="auto" poster="https://via.placeholder.com/600x900/ddd/777?text=Projection+video+9x16">
