--- a/project-hahaha/index.html
+++ b/project-hahaha/index.html
@@ -40,20 +40,20 @@
 
           <div class="divider"></div>
 
-          <div class="facts">
-            <div class="fact">
-              <div class="k">Role</div>
-              <div class="v">Concept, Code, Sound</div>
-            </div>
-            <div class="fact">
-              <div class="k">Tools</div>
-              <div class="v">p5.js + p5.sound, Premiere, Soft sculpture</div>
-            </div>
-            <div class="fact">
-              <div class="k">Output</div>
-              <div class="v">Interactive sound piece + drifting videos</div>
-            </div>
-          </div>
+         <div class="facts">
+  <div class="fact">
+    <div class="k">Role</div>
+    <div class="v">Concept, Code, Sound, Sculpture</div>
+  </div>
+  <div class="fact">
+    <div class="k">Tools</div>
+    <div class="v">p5.js + p5.sound, Accelerometer Sensor, ESP32, Sewing Machine</div>
+  </div>
+  <div class="fact">
+    <div class="k">Output</div>
+    <div class="v">Interactive sound piece + documentation videos</div>
+  </div>
+</div>
 
           <div class="divider"></div>
 
